opam-version: "1.2"
maintainer: "Bertrand Bonnefoy-Claudet <bertrand@cryptosense.com>"
authors: "Bertrand Bonnefoy-Claudet <bertrand@cryptosense.com>"
homepage: "https://github.com/cryptosense/enumerators"
bug-reports: "https://github.com/cryptosense/enumerators/issues"
license: "BSD-2"
dev-repo: "https://github.com/cryptosense/enumerators.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1.0"}
  "ounit" {test}
]
depopts: []
tags: ["org:cryptosense"]
available: [ocaml-version >= "4.02.0"]
