opam-version: "2.0"
maintainer: "Bertrand Bonnefoy-Claudet <bertrand@cryptosense.com>"
authors: "Bertrand Bonnefoy-Claudet <bertrand@cryptosense.com>"
homepage: "https://github.com/cryptosense/enumerators"
bug-reports: "https://github.com/cryptosense/enumerators/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/enumerators.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1.0"}
  "ocaml" {>= "4.02.0"}
  "ounit" {with-test}
]
tags: ["org:cryptosense"]
